# hdql

./: .gitignore  .gitlab-ci.cern.yml  CMakeLists.txt  Config.cmake.in  Makefile  README.rst  compile_flags.txt  hdql.l  hdql.y
doc/: TODO.rst  concepts.rst  note-on-binding.rst
include/hdql/: allocator.h  attr-def-unwind.h  attr-def.h  compound.h  context.h  errors.h  function-depr.h  function.h  hash-table.h  helpers.hh  internal-api.h  internal-ifaces.h  operations.h  query-key.h  query-product.h  query.h  random.h  types.h  union.h  value.h
include/hdql/helpers/: compounds.hh  fancy-print-err.h  functions.hh  print-tree.h  query-results-handler-csv.h  query-results-handler.h  query-results-table.h  query.hh  queryResultsTable.hh
include/hdql/util/: allocator.h  avl-tree.h  ht.h  list.h  pcg32.h
src/: allocator.c  attr-def-unwind.c  attr-def.c  compound.c  compound.cc  context.c  context.cc  converters.c  converters.cc  errors.c  function-depr.cc  function.cc  hash-table.c  key.c  operations.cc  query-key.c  query-key.cc  query-product.c  query.c  query.cc  random.c  tcast-function.c.xxx  type-promotion-table.c  types.c  types.cc  value.c  value.cc
src/funcs/: generic-logic.c.xxx  len.c  monoids.c  simple-arith-monoids.c  sum.c
src/helpers/: fancy-print-err.c  print-tree-attr-def-w-data.c  print-tree-attr-def.c  print-tree.c  query-results-handler-csv.c  query-results-handler.c  query-results-table.c  query.cc  queryResultsTable.cc
src/ifaces/: arith-op-as-collection.c  arith-op-as-scalar.c  bound-compound-collection.c  bound-value.c  filtered-v-compound.c  fwd-query-as-collection.c  fwd-query-as-scalar.c  mfunc-as-scalar.cc  subquery-as-collection.c
src/util/: allocator.c  avl-fmap.c.m4  avl-fset.c.m4  avl-tree.c  avl.ic  avl.m4  ht.c  pcg32.c
templates/: events-struct.cc.m4  for-all-types.m4  iface-implems.cc.m4  pop-defs.m4  push-defs-declare.m4  push-defs-impl-iface.m4  push-defs-register-attr-def.m4
templates/implems/: arrayAtomic.cc.m4  arrayCompound.cc.m4  mapCompound.cc.m4  scalarAtomic.cc.m4  scalarCompound.cc.m4
test/: avl-tree.test.cc  basic-context.cc  basic-context.hh  benchmark-ht-test.main.cc  compiled-query.cc  compiled-query.hh  cpp-api.cc  cross-type-operations.cc  cross-type-operations.hh  dsv.test.cc  event-struct.test.cc  events-struct.cc  events-struct.depr.cc  events-struct.hh  ht.test.cc  iteration-results.cc  iteration-results.hh  iteration-tests.cc  main.cc  main.dump.cc  query-product.test.cc  rnd.cc  samples.cc  samples.hh  simple-arithmetics.cc  test.cc.xxx  value.cc
test/basic/: basic-query.cc  basic-query.hh  collection.cc  scalar-stateful.cc  scalar-stateless.cc
test/iteration-tests/: arithmetics.cc  singular-query.cc  v-compound-bind.cc  v-compound-fwd.cc
test/monoids/: all.cc  any.cc  arb.cc  b-and.cc  b-or.cc  b-xor.cc  count.cc  empty.cc  len.cc  max.cc  mean.cc  min.cc  monoids.cc  monoids.hh  product.cc  sum.cc
